Checkpoint OPENDJ-1343 Migrate dsconfig Minor code cleanup and reorganized imports.